--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,8 @@ body {
   place-items: start;
   min-width: 320px;
   min-height: 100vh;
-  background-color: aquamarine;
-  color: yellow;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 h1 {
